--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
@@ -52,7 +52,7 @@
         <div style="width: 50px"></div>
       </div>
       <div class="user-buttons">
-        <button routerLink = '/Usuario'>Usuario 👤</button>
+        <button routerLink = '/Usuario'>Administrador 👤</button>
         <button routerLink = '/Ajustes'>Ajustes ⚙️</button>
         <button routerLink = '/Notificaciones'>Notificaciones 🔔</button>
       </div>
