--- a/Cliente_web/Cliente_webFront/src/app/principal-page-users/principal-page-users.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page-users/principal-page-users.component.html
@@ -51,8 +51,11 @@
 
     <!-- Página principal en blanco-->
     <div *ngIf="currentRoute === '/principalPageUsers'">
-      <h1 style="margin-left: 20px" class="principalTitles"> Bienvenido, esta es la página principal, pero del Usuario</h1>
-      <p style="margin-left: 20px" class="secondaryText"> Este es solo un print de prueba</p>
+      <h1 style="margin-left: 20px" class="principalTitles"> Bienvenido. </h1>
+      <p style="margin-left: 300px" class="secondaryText">En esta página principal encontrarás todas las herramientas y recursos necesarios para gestionar el sistema de forma sencilla y eficiente."</p>
+      <div style="height: 30px"></div>
+      <p style="margin-left: 50px" class="secondaryText"> Aquí puede encontrar el manual de usuario, (se recomienda leerlo antes de usar la página)</p>
+      <button style="margin-left: 50px" class="buttons"> Descarga del manual de administrador</button>
     </div>
 
     <!-- Contenido dinámico/Navegación de las rutas -->
