--- a/Cliente_web/Cliente_webFront/src/app/principal-page-users/principal-page-users.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page-users/principal-page-users.component.html
@@ -55,7 +55,9 @@
       <p style="margin-left: 300px" class="secondaryText">En esta página principal encontrarás todas las herramientas y recursos necesarios para gestionar el sistema de forma sencilla y eficiente."</p>
       <div style="height: 30px"></div>
       <p style="margin-left: 50px" class="secondaryText"> Aquí puede encontrar el manual de usuario, (se recomienda leerlo antes de usar la página)</p>
-      <button style="margin-left: 50px" class="buttons"> Descarga del manual de usuario</button>
+      <button type="button" style="margin-left: 50px" class="buttons" (click)="descargarManualUsuario()">
+        Descarga del Manual de Usuario
+      </button>
     </div>
 
     <!-- Contenido dinámico/Navegación de las rutas -->
