--- a/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
+++ b/Cliente_web/Cliente_webFront/src/app/principal-page/principal-page.component.html
@@ -65,7 +65,11 @@
       <p style="margin-left: 300px" class="secondaryText">En esta página principal encontrarás todas las herramientas y recursos necesarios para gestionar el sistema de forma sencilla y eficiente."</p>
       <div style="height: 30px"></div>
       <p style="margin-left: 50px" class="secondaryText"> Aquí puede encontrar el manual de administrador</p>
-      <button style="margin-left: 50px" class="buttons"> Descarga del manual de administrador</button>
+      <button type="button" style="margin-left: 50px" class="buttons" (click)="descargarManualAdministrador()">
+        Descarga del manual de administrador
+      </button>
+
+
     </div>
 
     <!-- Contenido dinámico/Navegación de las rutas -->
